# FaceDetectionWithOpenCVDNN

./: CMakeLists.txt  CMakeLists_bin.txt  CMakeLists_lib.txt  README.md  fd.cpp  fd.h  fdStandAlone.cpp  test.cpp  testLib.cpp
